fix: product title spacing on medium breakpoint

--- a/source/stylesheets/product.css.sass
+++ b/source/stylesheets/product.css.sass
@@ -30,7 +30,8 @@
 
   @media screen and (max-width: $break-medium)
     padding-bottom: 0
-    margin-bottom: 0
+    margin-bottom: 30px
+    margin-top: 30px
 
   h1
     margin-bottom: 10px
